@@ -128,6 +128,12 @@ namespace Avogadro {
         Bond *bond = (Bond *)molecule->GetBond(m_hits[0].name());
         if (bond) { // if we can't find the bond, we can't do anything here
 
+          // do not try to change X-H bond order when adjust hydrogens is on 
+          if(m_addHydrogens) {
+            if (bond->GetBeginAtom()->IsHydrogen() || bond->GetEndAtom()->IsHydrogen())
+              return 0;
+          }
+
           unsigned int bondOrder, oldBondOrder;
           oldBondOrder = bond->GetBondOrder();
 
@@ -402,6 +408,14 @@ namespace Avogadro {
         // bug #1898118
         // both beginAtom, endAtom and bond exist, but the bond order has changed
         if ((int)m_prevBond->GetBondOrder() != m_prevBondOrder) {
+          // do not try to change X-H bond order when adjust hydrogens is on 
+          if(m_addHydrogens) {
+            if (m_prevBond->GetBeginAtom()->IsHydrogen() || m_prevBond->GetEndAtom()->IsHydrogen()) {
+              m_prevBond->SetBondOrder(1); // restore 
+              return 0;
+            }
+          }
+
           undo = new ChangeBondOrderDrawCommand(widget->molecule(), m_prevBond,
                                                 m_prevBondOrder, m_addHydrogens);
           undo->setText(tr("Change Bond Order"));
@@ -733,12 +747,12 @@ namespace Avogadro {
   }
 
   void DrawTool::showFragmentDialog(bool) {
-		if (m_fragmentDialog->isVisible()) {
+    if (m_fragmentDialog->isVisible()) {
       m_fragmentDialog->hide();
       m_insertFragmentMode = false;
     } else {
-	    m_fragmentDialog->show();
-		}
+      m_fragmentDialog->show();
+    }
   }
 
   void DrawTool::writeSettings(QSettings &settings) const
